Added remove device

--- a/Crome_JS_Server_V0.1/TestCode/Test3.html
+++ b/Crome_JS_Server_V0.1/TestCode/Test3.html
@@ -4,14 +4,18 @@
 	</head>
     <body>
 		<div class="windowMain">
-			<input type="button" id="btnStart" value="Start">
-        	<input type="button" id="btnAddDevice" value="Add Device">
-        	<label id="my_label" >Hello</label>
-			<input type="text" id="textSendHex" placeholder="Hex Msg"> <br>
-    		<input type="button" id="btnSendHex" value="Send Hex">
-			<input type="button" id="btnNoteOn" value="Note On">
-			<input type="button" id="btnNoteOff" value="Note Off">
-			<input type="button" id="btnGetConfig" value="Get Config">
+			<input class="control" type="button" id="btnStart" value="Start">
+        	<input class="control" type="button" id="btnAddDevice" value="Add Device">
+        	<input class="control" type="button" id="btnRemoveDevice" value="Remove Device">
+			<br>
+			<input class="control" type="text" id="textSendHex" placeholder="Hex Msg">
+    		<input class="control" type="button" id="btnSendHex" value="Send Hex">
+			<br>
+			<input class="control" type="button" id="btnNoteOn" value="Note On">
+			<input class="control" type="button" id="btnNoteOff" value="Note Off">
+			<input class="control" type="button" id="btnGetConfig" value="Get Config">
+			<br>
+			<label id="my_label" >-</label>
 		</div>
 		<div class="windowRightBar" id="windowRightBar">
 			
