--- a/Crome_JS_Server_V0.1/index.html
+++ b/Crome_JS_Server_V0.1/index.html
@@ -6,6 +6,7 @@
 		<div class="windowMain">
 			<div class="player">
 				<input class="control" type="button" id="btnStart" value="Start">
+				<input class="control" type="button" id="btnGetMidiPorts" value="Get Midi Ports">
 				<br>
 				<input class="control" type="text" id="textSendHex" placeholder="Hex Msg">
 				<input class="control" type="button" id="btnSendHex" value="Send Hex">
@@ -13,6 +14,10 @@
 				<input class="control" type="button" id="btnNoteOn" value="Note On">
 				<input class="control" type="button" id="btnNoteOff" value="Note Off">
 				<input class="control" type="button" id="btnGetConfig" value="Get Config">
+				<br>
+				<select multiple id="midiSourcesDropDown">
+					<option> None </option>
+				</select>
 				<br>
 				<label id="my_label" >-</label>
 			</div>
