Working Midi in to Device

--- a/Crome_JS_Server_V0.1/index.html
+++ b/Crome_JS_Server_V0.1/index.html
@@ -16,7 +16,7 @@
 				<input class="control" type="button" id="btnGetConfig" value="Get Config">
 				<br>
 				<select multiple id="midiSourcesDropDown">
-					<option> None </option>
+					<option value=""> None </option>
 				</select>
 				<br>
 				<label id="my_label" >-</label>
