Refactored Code Base

--- a/Crome_JS_Server_V0.1/index.html
+++ b/Crome_JS_Server_V0.1/index.html
@@ -14,6 +14,8 @@
 				<input class="control" type="button" id="btnNoteOn" value="Note On">
 				<input class="control" type="button" id="btnNoteOff" value="Note Off">
 				<input class="control" type="button" id="btnGetConfig" value="Get Config">
+				<input class="control" type="button" id="btnSetRobin" value="Robin">
+				<input class="control" type="button" id="btnSetStraight" value="Straight">
 				<br>
 				<select multiple id="midiSourceDropDown">
 					<option value="" selected="selected"> None </option>
