--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-	<head>
-	<object type="text/html" data="Chrome_JS_SERVER_V0.1/index.html"></object>
-	</head>
- </html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='Chrome_JS_Server_V0.1/index.html'" />
+  </head>
+  <body>
+    <p>Please follow <a href="Chrome_JS_Server_V0.1/index.html">this link</a>.</p>
+  </body>
+</html>
