--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='Chrome_JS_Server_V0.1/index.html'" />
+    <!-- <meta http-equiv="refresh" content="0; url='Chrome_JS_Server_V0.1/index.html'" /> -->
+    <meta http-equiv="refresh" content="0; url='Chrome_JS_Server_V2.0/my-app/build/index.html'" />
   </head>
   <body>
-    <p>Please follow <a href="Chrome_JS_Server_V0.1/index.html">this link</a>.</p>
+    <!-- <p>Please follow <a href="Chrome_JS_Server_V0.1/index.html">this link</a>.</p> -->
+    <p>Please follow <a href="Chrome_JS_Server_V2.0/my-app/build/index.html">this link</a>.</p>
   </body>
 </html>
